# opengl-tutorial-rs

./: Cargo.toml  README.md
src/: main.rs
src/shaders/: shader.fs  shader.vs  texture_shader.fs
