[package]
name = "opengl-tutorial-rs"
version = "0.1.0"
authors = ["tkaleas <terry.kaleas@gmail.com>"]

[dependencies]
cgmath = "0.16.1"
gl = "0.10.0"
#glfw = "0.23.0"
image = "0.19.0"
# only needed from chapter 3 on
tobj = "0.1.6"
num = "0.2.0"
rand = "0.5.5"

[dependencies.glfw]
git = "https://github.com/bjz/glfw-rs.git"
#default-features = false
